--- a/Join_the_Legion_now/css/styles.css
+++ b/Join_the_Legion_now/css/styles.css
@@ -1,6 +1,6 @@
 
   *{
-    box-sizing: border-box;/* для установки подефолту всіх обєктів по своїм розмірам*/
+    box-sizing: border-box; /* для установки подефолту всіх обєктів по своїм розмірам*/
   }
   .header{
     margin-top: 80px;
@@ -15,9 +15,12 @@
     виштовхнув нижній вниз*/
   }
   body{
+    background-image: url(../img/Emblem.9.jpg) ;
+    
     font-family:  Tahoma, Geneva,  sans-serif;
     line-height: 1.5; /**/
     color: #333333;
+    
     
    
   }
@@ -81,16 +84,22 @@
    margin: 10px 10px;
    line-height: 1.2;
   
+  
   }
   .feature-header{
     text-align: center;
     text-transform: uppercase;
     font-weight: 900;
     font-size: 24px;
+    color:  #f10c0c;
   }
   .features{
     margin: 60px auto;
+    padding-left: 75px;
     display: inline-block;
     text-align: center;
+    color:  #ee0a0a;
+    font-size: 20px;
+    
   }
   
